apps/prowlarr/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prowlarr-virtual-service
  namespace: media
spec:
  hosts:
  - "prowlarr.securefamily.tv"
  gateways:
  - default/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9696
        host: prowlarr-service.media.svc.cluster.local
